--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                                 <tr class="hover:bg-purple-50">
                                     <td class="p-4 border-b border-purple-200">理監事晚宴</td>
                                     <td class="p-4 border-b border-purple-200 min-w-fit">18:30 - 21:00</td>
-                                    <td class="p-4 border-b border-purple-200">花田盛事</td>
+                                    <td class="p-4 border-b border-purple-200"><a href="https://maps.app.goo.gl/n1We4C8DyPNXGHBo6" class="text-blue-600">花田盛事</a></td>
                                 </tr>
                             </tbody>
                      </table>
@@ -493,7 +493,7 @@
                                 <tr class="hover:bg-purple-50">
                                     <td class="p-4 border-b border-purple-200">晚宴</td>
                                     <td class="p-4 border-b border-purple-200 min-w-fit">18:30 - 21:30</td>
-                                    <td class="p-4 border-b border-purple-200">花田盛事</td>
+                                    <td class="p-4 border-b border-purple-200"><a href="https://maps.app.goo.gl/n1We4C8DyPNXGHBo6" class="text-blue-600">花田盛事</a></td>
                                 </tr>
                             </tbody>
                         </table>
