--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <!-- 圖片 Logo -->
                 <img src="https://via.placeholder.com/40x40.png?text=Logo" alt="研討會 Logo" class="h-10 rounded-lg">
                 <!-- 標題文字，在小螢幕上使用 <br> 換行 -->
-                <span class="text-xl md:text-2xl font-bold text-blue-700 leading-tight">
+                <span class="text-base md:text-2xl font-bold text-blue-700 leading-tight">
                     第33屆中華民國人因工程學會年會<span class="md:hidden"><br></span>暨學術研討會
                 </span>
             </a>
@@ -1384,6 +1384,7 @@
     </script>
 </body>
 </html>
+
 
 
 
