--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <!-- 網站標題/Logo -->
             <a href="#hero" class="flex items-center space-x-3">
                 <!-- 圖片 Logo -->
-                <img src="https://via.placeholder.com/40x40.png?text=Logo" alt="研討會 Logo" class="h-10 rounded-lg">
+                <img src="LOGO.jpg" alt="研討會 Logo" class="h-20 rounded-lg">
                 <!-- 標題文字，在小螢幕上使用 <br> 換行 -->
                 <span class="text-base md:text-2xl font-bold text-blue-700 leading-tight">
                     第33屆中華民國人因工程學會年會<span class="md:hidden"><br></span>暨學術研討會
@@ -213,11 +213,6 @@
 
 
                         <tr>
-                            <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 bg-purple-200 text-center">監事</td>
-                            <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 text-center">石裕川</td>
-                            <td class="px-6 py-3 text-gray-700">國防大學運籌管理學系 教授</td>
-                        </tr>
-                        <tr>
                             <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 bg-blue-300 text-center">理事</td>
                             <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 text-center">李育奇</td>
                             <td class="px-6 py-3 text-gray-700">國立臺北科技大學工業工程與管理系 助理教授</td>
@@ -226,11 +221,6 @@
                             <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 bg-blue-300 text-center">理事</td>
                             <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 text-center">李昀儒</td>
                             <td class="px-6 py-3 text-gray-700">國立清華大學工業工程與工程管理學系 教授/副系主任</td>
-                        </tr>
-                        <tr>
-                            <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 bg-purple-200 text-center">監事</td>
-                            <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 text-center">林久翔</td>
-                            <td class="px-6 py-3 text-gray-700">國立臺灣科技大學工業管理系 特聘教授</td>
                         </tr>
                         <tr>
                             <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 bg-blue-300 text-center">理事</td>
@@ -253,19 +243,9 @@
                             <td class="px-6 py-3 text-gray-700">元智大學工業工程與管理學系 副教授</td>
                         </tr>
                         <tr>
-                            <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 bg-purple-200 text-center">監事</td>
-                            <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 text-center">紀佳芬</td>
-                            <td class="px-6 py-3 text-gray-700">國立臺灣科技大學工業管理系 特聘教授</td>
-                        </tr>
-                        <tr>
                             <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 bg-blue-300 text-center">理事</td>
                             <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 text-center">唐硯漁</td>
                             <td class="px-6 py-3 text-gray-700">國立高雄師範大學工業設計學系 教授/副校長</td>
-                        </tr>
-                        <tr>
-                            <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 bg-purple-200 text-center">監事</td>
-                            <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 text-center">張堅琦</td>
-                            <td class="px-6 py-3 text-gray-700">國立清華大學工業工程與工程管理學系 教授</td>
                         </tr>
                         <tr>
                             <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 bg-blue-300 text-center">理事</td>
@@ -282,6 +262,28 @@
                             <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 text-center">劉永平</td>
                             <td class="px-6 py-3 text-gray-700">國立雲林科技大學工業工程與管理系 副教授</td>
                         </tr>
+                        <tr>
+                            <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 bg-purple-200 text-center">監事</td>
+                            <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 text-center">石裕川</td>
+                            <td class="px-6 py-3 text-gray-700">國防大學運籌管理學系 教授</td>
+                        </tr>
+                        <tr>
+                            <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 bg-purple-200 text-center">監事</td>
+                            <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 text-center">林久翔</td>
+                            <td class="px-6 py-3 text-gray-700">國立臺灣科技大學工業管理系 特聘教授</td>
+                        </tr>
+                        
+                        <tr>
+                            <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 bg-purple-200 text-center">監事</td>
+                            <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 text-center">紀佳芬</td>
+                            <td class="px-6 py-3 text-gray-700">國立臺灣科技大學工業管理系 特聘教授</td>
+                        </tr>
+                        <tr>
+                            <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 bg-purple-200 text-center">監事</td>
+                            <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 text-center">張堅琦</td>
+                            <td class="px-6 py-3 text-gray-700">國立清華大學工業工程與工程管理學系 教授</td>
+                        </tr>
+                        
 
 
                         <tr>
@@ -1384,7 +1386,6 @@
     </script>
 </body>
 </html>
-
 
 
 
