--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                                     <td class="p-4 border-b border-purple-200">秀德廳</td>
                                 </tr>
                                 <tr class="hover:bg-purple-50 text-center">
-                                    <td class="p-4 border-b border-purple-200">休息茶敘</td>
+                                    <td class="p-4 border-b border-purple-200">茶敘</td>
                                     <td class="p-4 border-b border-purple-200 ">10:40 - 11:00</td>
                                     <td class="p-4 border-b border-purple-200">秀德廳</td>
                                 </tr>
@@ -472,28 +472,38 @@
                                     <td class="p-4 border-b border-purple-200">莊敬大樓</td>
                                 </tr>
                                 <tr class="hover:bg-purple-50 text-center">
-                                    <td class="p-4 border-b border-purple-200">論壇與學生發表(I)</td>
+                                    <td class="p-4 border-b border-purple-200">論壇(I+II+III)</td>
                                     <td class="p-4 border-b border-purple-200">14:00 - 15:30</td>
                                     <td class="p-4 border-b border-purple-200">莊敬大樓</td>
                                 </tr>
                                 <tr class="hover:bg-purple-50 text-center">
-                                    <td class="p-4 border-b border-purple-200">休息茶敘</td>
-                                    <td class="p-4 border-b border-purple-200 ">15:30 - 16:00</td>
+                                    <td class="p-4 border-b border-purple-200">茶敘</td>
+                                    <td class="p-4 border-b border-purple-200 ">15:15 - 15:25</td>
                                     <td class="p-4 border-b border-purple-200">莊敬大樓</td>
                                 </tr>
                                 <tr class="hover:bg-purple-50 text-center">
-                                    <td class="p-4 border-b border-purple-200">論壇與學生發表(II)</td>
-                                    <td class="p-4 border-b border-purple-200 ">16:00 - 17:30</td>
+                                    <td class="p-4 border-b border-purple-200">論壇(IV+V)</td>
+                                    <td class="p-4 border-b border-purple-200 ">15:25 - 16:40</td>
                                     <td class="p-4 border-b border-purple-200">莊敬大樓</td>
                                 </tr>
                                 <tr class="hover:bg-purple-50 text-center">
-                                    <td class="p-4 border-b border-purple-200">移動至晚宴會場</td>
-                                    <td class="p-4 border-b border-purple-200 ">17:30 - 18:30</td>
+                                    <td class="p-4 border-b border-purple-200">茶敘</td>
+                                    <td class="p-4 border-b border-purple-200 ">16:40 - 16:50</td>
                                     <td class="p-4 border-b border-purple-200"></td>
                                 </tr>
                                 <tr class="hover:bg-purple-50 text-center">
-                                    <td class="p-4 border-b border-purple-200">晚宴</td>
-                                    <td class="p-4 border-b border-purple-200 ">18:30 - 21:30</td>
+                                    <td class="p-4 border-b border-purple-200">論壇(VI+VII)</td>
+                                    <td class="p-4 border-b border-purple-200 ">16:50 - 18:00</td>
+                                    <td class="p-4 border-b border-purple-200"></td>
+                                </tr>
+                                <tr class="hover:bg-purple-50 text-center">
+                                    <td class="p-4 border-b border-purple-200">移動至晚宴會場</td>
+                                    <td class="p-4 border-b border-purple-200 ">18:00 - 18:30</td>
+                                    <td class="p-4 border-b border-purple-200"></td>
+                                </tr>
+                                <tr class="hover:bg-purple-50 text-center">
+                                    <td class="p-4 border-b border-purple-200">大會晚宴</td>
+                                    <td class="p-4 border-b border-purple-200 ">18:30 - 20:30</td>
                                     <td class="p-4 border-b border-purple-200"><a href="https://maps.app.goo.gl/n1We4C8DyPNXGHBo6" class="text-blue-600">花田盛事</a></td>
                                 </tr>
                             </tbody>
@@ -517,7 +527,7 @@
                                     <td class="p-4 border-b border-purple-200">莊敬大樓</td>
                                 </tr>
                                 <tr class="hover:bg-purple-50 text-center">
-                                    <td class="p-4 border-b border-purple-200">論壇與學生發表(I)</td>
+                                    <td class="p-4 border-b border-purple-200">論文口頭發表(I)</td>
                                     <td class="p-4 border-b border-purple-200 ">08:30 - 10:00</td>
                                     <td class="p-4 border-b border-purple-200">莊敬大樓</td>
                                 </tr>
@@ -527,7 +537,7 @@
                                     <td class="p-4 border-b border-purple-200">莊敬大樓</td>
                                 </tr>
                                 <tr class="hover:bg-purple-50 text-center">
-                                    <td class="p-4 border-b border-purple-200">論壇與學生發表(II)</td>
+                                    <td class="p-4 border-b border-purple-200">論文口頭發表(II)</td>
                                     <td class="p-4 border-b border-purple-200 ">10:20 - 11:50</td>
                                     <td class="p-4 border-b border-purple-200">莊敬大樓</td>
                                 </tr>
@@ -1385,7 +1395,6 @@
     </script>
 </body>
 </html>
-
 
 
 
