--- a/index.html
+++ b/index.html
@@ -489,17 +489,17 @@
                                 <tr class="hover:bg-purple-50 text-center">
                                     <td class="p-4 border-b border-purple-200">茶敘</td>
                                     <td class="p-4 border-b border-purple-200 ">16:40 - 16:50</td>
-                                    <td class="p-4 border-b border-purple-200"></td>
+                                    <td class="p-4 border-b border-purple-200">莊敬大樓</td>
                                 </tr>
                                 <tr class="hover:bg-purple-50 text-center">
                                     <td class="p-4 border-b border-purple-200">論壇(VI+VII)</td>
                                     <td class="p-4 border-b border-purple-200 ">16:50 - 18:00</td>
-                                    <td class="p-4 border-b border-purple-200"></td>
+                                    <td class="p-4 border-b border-purple-200">莊敬大樓</td>
                                 </tr>
                                 <tr class="hover:bg-purple-50 text-center">
                                     <td class="p-4 border-b border-purple-200">移動至晚宴會場</td>
                                     <td class="p-4 border-b border-purple-200 ">18:00 - 18:30</td>
-                                    <td class="p-4 border-b border-purple-200"></td>
+                                    <td class="p-4 border-b border-purple-200">莊敬大樓</td>
                                 </tr>
                                 <tr class="hover:bg-purple-50 text-center">
                                     <td class="p-4 border-b border-purple-200">大會晚宴</td>
