--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                                 <tr class="hover:bg-purple-50 text-center">
                                     <td class="p-4 border-b border-purple-200">移動至晚宴會場</td>
                                     <td class="p-4 border-b border-purple-200 ">18:00 - 18:30</td>
-                                    <td class="p-4 border-b border-purple-200">莊敬大樓</td>
+                                    <td class="p-4 border-b border-purple-200"></td>
                                 </tr>
                                 <tr class="hover:bg-purple-50 text-center">
                                     <td class="p-4 border-b border-purple-200">大會晚宴</td>
@@ -1395,6 +1395,7 @@
     </script>
 </body>
 </html>
+
 
 
 
