--- a/index.html
+++ b/index.html
@@ -683,7 +683,8 @@
                         <div id="tab-symposium" class="submission-tab-panel space-y-4">
                             <p>本屆年會將聚焦於 AI 與人因工程的結合，探討智慧科技如何影響人機協作、決策支援與風險控管，並呈現跨領域的最新研究成果。議題 涵蓋醫療人因與智慧照護、休閒與運動、交通安全與智慧運輸、職業安全與工作設計、國防與軍事人因、產品設計與創新等方向，期望透過跨界交流，促進產官學研的合作，開創人因工程在智慧社會下的新格局。</p>
                             <h3 class="text-2xl font-semibold text-gray-800 pt-4">重要時程</h3>
-                             <ul class="list-disc list-inside space-y-2">
+                             <!--
+                            <ul class="list-disc list-inside space-y-2">
                                 <li><strong>開始投稿和線上報名：</strong> 2025.11.01-2026.02.10</li>
                                 <li><strong>徵稿截止：</strong> 2026.01.17</li>
                                 <li><strong>寄發論文接受信：</strong> 2026.02.01</li>
@@ -696,10 +697,12 @@
                                     查看活動詳情
                                 </a>
                             </div>
+                            -->
                         </div>
                         <div id="tab-paper-competition" class="submission-tab-panel hidden space-y-4">
                              <p>為鼓勵學生積極參與人因工程學術研究，提昇論文寫作與發表能力，特舉辦本競賽。</p>
                              <h3 class="text-2xl font-semibold text-gray-800 pt-4">重要時程</h3>
+                             <!--
                              <ul class="list-disc list-inside space-y-2">
                                 <li><strong>開始投稿和線上報名：</strong> 2025.11.01-2026.02.10</li>
                                 <li><strong>徵稿截止：</strong> 2026.01.17</li>
@@ -712,10 +715,12 @@
                                     查看競賽詳情
                                 </a>
                             </div>
+                            -->
                         </div>
                         <div id="tab-design-competition" class="submission-tab-panel hidden space-y-4">
                             <p>「智慧生活、人本設計」，鼓勵學生發揮創意，運用人因工程知識，設計解決實際生活問題的產品或服務。</p>
                             <h3 class="text-2xl font-semibold text-gray-800 pt-4">重要時程</h3>
+                            <!--
                              <ul class="list-disc list-inside space-y-2">
                                 <li><strong>創意徵稿和線上報名：</strong> 2025.11.01-2026.02.10</li>
                                 <li><strong>出賽徵稿截止：</strong> 2026.01.17</li>
@@ -728,6 +733,7 @@
                                     查看競賽詳情
                                 </a>
                             </div>
+                            -->
                         </div>
                     </div>
                 </div>
@@ -836,6 +842,22 @@
                             <div class="flex justify-center" title="國科會">
                                 <img src="NSTC.jpg" alt="國科會" class="max-h-30 transition-all duration-300 cursor-pointer">
                             </div>
+                            <div class="flex justify-center" title="中科院">
+                                <img src="NCSIST.jpg" alt="中科院" class="max-h-25 transition-all duration-300 cursor-pointer">
+                            </div>
+                            <div class="flex justify-center" title="中原大學工業與系統工程學系">
+                                <img src="cycuiselogo.jpg" alt="中原大學工業與系統工程學系" class="max-h-25 transition-all duration-300 cursor-pointer">
+                            </div>
+                            <div class="flex justify-center" title="勞動部勞動及職業安全衛生所">
+                                <img src="IOSH.svg" alt="勞動部勞動及職業安全衛生所" class="max-h-25 transition-all duration-300 cursor-pointer">
+                            </div>
+                            <div class="flex justify-center" title="工程科技推展中心">
+                                <img src="ETPC.jpg" alt="工程科技推展中心" class="max-h-25 transition-all duration-300 cursor-pointer">
+                            </div>
+                            <!--
+                            <div class="flex justify-center" title="國科會">
+                                <img src="NSTC.jpg" alt="國科會" class="max-h-30 transition-all duration-300 cursor-pointer">
+                            </div>
                             <div class="flex justify-center" title="工業工程學會">
                                 <img src="CIIE.png" alt="工業工程學會" class="max-h-30 transition-all duration-300 cursor-pointer">
                             </div>
@@ -881,6 +903,7 @@
                             <div class="flex justify-center" title="拓比有限公司">
                                 <img src="tobii.jpg" alt="tobii拓比有限公司" class="max-h-25 transition-all duration-300 cursor-pointer">
                             </div>
+                            -->
                         </div>
                     </div>
                 </div>
@@ -1395,7 +1418,6 @@
     </script>
 </body>
 </html>
-
 
 
 
