--- a/index.html
+++ b/index.html
@@ -854,6 +854,7 @@
                             <div class="flex justify-center" title="工程科技推展中心">
                                 <img src="ETPC.jpg" alt="工程科技推展中心" class="max-h-25 transition-all duration-300 cursor-pointer">
                             </div>
+                            <p>新增中</p>
                             <!--
                             <div class="flex justify-center" title="國科會">
                                 <img src="NSTC.jpg" alt="國科會" class="max-h-30 transition-all duration-300 cursor-pointer">
