--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
                 <div class="max-w-5xl mx-auto space-y-20">
                     <!-- Subsection 3: Sponsors and Partners -->
                     <div>
-                        <h3 class="text-3xl font-bold text-gray-800 mb-8 text-center">協力單位</h3>
+                        <h3 class="text-3xl font-bold text-gray-800 mb-8 text-center">協力單位(新增中)</h3>
                         <p class="text-center text-xl text-gray-600 mb-10">感謝以下單位的支持與贊助，讓本次研討會得以順利舉行。</p>
                         <div class="grid grid-cols-2 md:grid-cols-4 gap-10 items-center">
                             <div class="flex justify-center" title="國科會">
@@ -854,7 +854,6 @@
                             <div class="flex justify-center" title="工程科技推展中心">
                                 <img src="ETPC.jpg" alt="工程科技推展中心" class="max-h-25 transition-all duration-300 cursor-pointer">
                             </div>
-                            <p>新增中</p>
                             <!--
                             <div class="flex justify-center" title="國科會">
                                 <img src="NSTC.jpg" alt="國科會" class="max-h-30 transition-all duration-300 cursor-pointer">
