--- a/submission-design.html
+++ b/submission-design.html
@@ -28,7 +28,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="bg-no-repeat bg-cover bg-fixed" style="background-image: url('bgbg.png')">
         <section class="py-16 md:py-24 bg-white">
             <div class="container mx-auto px-6">
                 <div class="text-center mb-16">
@@ -70,19 +70,23 @@
                                 <tbody>
                                     <tr class="border-b">
                                         <td class="py-3 pr-4 font-semibold">創意徵稿和線上報名</td>
-                                        <td class="py-3">2025年11月01日 ~ 2026年02月10日</td>
+                                        <td class="py-3">2026年03月06日</td>
                                     </tr>
                                     <tr class="border-b">
-                                        <td class="py-3 pr-4 font-semibold">初賽徵稿截止</td>
-                                        <td class="py-3">2026年01月17日</td>
+                                        <td class="py-3 pr-4 font-semibold">資格審查</td>
+                                        <td class="py-3">2026年03月09日 ~ 2026年03月13日</td>
                                     </tr>
                                     <tr class="border-b">
                                         <td class="py-3 pr-4 font-semibold">初賽入圍公告</td>
-                                        <td class="py-3">2026年01月31日</td>
+                                        <td class="py-3">2026年03月14日</td>
                                     </tr>
                                     <tr class="border-b">
                                         <td class="py-3 pr-4 font-semibold">決賽</td>
-                                        <td class="py-3">2026年03月07日 (TBD)</td>
+                                        <td class="py-3">2026年03月20日</td>
+                                    </tr>
+                                    <tr class="border-b">
+                                        <td class="py-3 pr-4 font-semibold">得獎名單公布</td>
+                                        <td class="py-3">2026年03月23日</td>
                                     </tr>
                                     <tr>
                                         <td class="py-3 pr-4 font-semibold">頒獎典禮</td>
