--- a/submission-paper.html
+++ b/submission-paper.html
@@ -28,7 +28,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="bg-no-repeat bg-cover bg-fixed" style="background-image: url('bgbg.png')">
         <section class="py-16 md:py-24 bg-white">
             <div class="container mx-auto px-6">
                 <div class="text-center mb-16">
@@ -87,15 +87,15 @@
                                 <tbody>
                                     <tr class="border-b">
                                         <td class="py-3 pr-4 font-semibold">開始投稿和線上報名</td>
-                                        <td class="py-3">2025年11月01日 ~ 2026年02月10日</td>
+                                        <td class="py-3">2025年12月22日</td>
                                     </tr>
                                     <tr class="border-b">
                                         <td class="py-3 pr-4 font-semibold">徵稿截止</td>
-                                        <td class="py-3">2026年01月17日</td>
+                                        <td class="py-3">2026年02月02日</td>
                                     </tr>
                                     <tr class="border-b">
                                         <td class="py-3 pr-4 font-semibold">決賽名單公佈</td>
-                                        <td class="py-3">2026年01月31日</td>
+                                        <td class="py-3">2026年02月16日</td>
                                     </tr>
                                     <tr class="border-b">
                                         <td class="py-3 pr-4 font-semibold">決賽</td>
