--- a/submission-symposium.html
+++ b/submission-symposium.html
@@ -28,7 +28,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="bg-no-repeat bg-cover bg-fixed" style="background-image: url('bgbg.png')">
         <section class="py-16 md:py-24 bg-white">
             <div class="container mx-auto px-6">
                 <div class="text-center mb-16">
@@ -70,23 +70,23 @@
                                 <tbody>
                                     <tr class="border-b">
                                         <td class="py-3 pr-4 font-semibold">開始投稿和線上報名</td>
-                                        <td class="py-3">2025年11月01日 ~ 2026年02月10日</td>
+                                        <td class="py-3">2025年12月22日</td>
                                     </tr>
                                     <tr class="border-b">
                                         <td class="py-3 pr-4 font-semibold">徵稿截止</td>
-                                        <td class="py-3">2026年01月17日</td>
+                                        <td class="py-3">2026年02月09日</td>
                                     </tr>
                                     <tr class="border-b">
                                         <td class="py-3 pr-4 font-semibold">審稿論文接受信</td>
-                                        <td class="py-3">2026年02月01日</td>
+                                        <td class="py-3">2026年02月16日</td>
                                     </tr>
                                     <tr class="border-b">
                                         <td class="py-3 pr-4 font-semibold">論文定稿上傳截止</td>
-                                        <td class="py-3">2026年02月15日</td>
+                                        <td class="py-3">2026年03月06日</td>
                                     </tr>
                                     <tr class="border-b">
                                         <td class="py-3 pr-4 font-semibold">費用繳交與研討會報名截止</td>
-                                        <td class="py-3">2026年03月14日</td>
+                                        <td class="py-3">2026年03月06日</td>
                                     </tr>
                                     <tr>
                                         <td class="py-3 pr-4 font-semibold">研討會舉辦日期</td>
