--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
         </section>
 
         <!-- Location & Accommodation Section -->
-        <section id="location" class="py-16 md:py-24 ">
+        <section id="location" class="py-16 md:py-24 bg-sky-100">
             <div class="container mx-auto px-6">
                 <div class="text-center mb-12">
                     <h2 class="text-[35px] font-bold text-gray-800">交通與住宿</h2>
@@ -1452,6 +1452,7 @@
     </script>
 </body>
 </html>
+
 
 
 
