新增通道至86區

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 white-space: nowrap;
             }
         }
+        
     </style>
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans">
@@ -66,7 +67,7 @@
                 <a href="#about" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-4 px-1 rounded-lg transition duration-200 ">關於研討會</a>
                 <a href="#schedule" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-4 px-1 rounded-lg transition duration-200 ">議程</a>
                 <a href="registration.html" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-1 px-0 rounded-lg transition duration-200 ">報名資訊</a>
-                <a href="" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-1 px-0 rounded-lg transition duration-200 ">論文投稿</a>
+                <a href="86wewontforget.html" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-1 px-0 rounded-lg transition duration-200 ">論文投稿</a>
                 <a href="#submission" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-4 px-1 rounded-lg transition duration-200 ">活動資訊</a>
                 <div></div>
                 <a href="#location" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-4 px-1 rounded-lg transition duration-200 ">交通與住宿</a>
@@ -136,7 +137,7 @@
             </div>
         </section>
 
-    <main class="bg-no-repeat bg-cover bg-fixed" style="background-image: url('bg.jpg')">
+    <main class="bg-no-repeat bg-cover bg-fixed" style="background-image: url('bgbg.png')">
         <!-- News Section -->
         <section id="news" class="py-16 md:py-24">
             <div class="container mx-auto px-6">
@@ -1452,7 +1453,6 @@
     </script>
 </body>
 </html>
-
 
 
 
