修補連接通道

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </div>
         </section>
 
-    <main class="bg-no-repeat bg-cover bg-fixed" style="background-image: url('bgbg.png')">
+    <main class="bg-no-repeat bg-cover bg-fixed" style="background-image: url('bg.jpg')">
         <!-- News Section -->
         <section id="news" class="py-16 md:py-24">
             <div class="container mx-auto px-6">
@@ -1453,6 +1453,7 @@
     </script>
 </body>
 </html>
+
 
 
 
