--- a/86wewontforget.html
+++ b/86wewontforget.html
@@ -38,7 +38,7 @@
       </div>
     </header>
 
-    <main class="bg-no-repeat bg-cover bg-fixed" style="background-image: url('bgbg.png')">
+    <main class="bg-no-repeat bg-cover bg-fixed" style="background-image: url('bg.jpg')">
         <section class="bg-white py-16 md:py-20">
             <div class="container mx-auto px-6 text-center max-w-xl">
                 <h1 class="text-4xl md:text-5xl font-serif-tc font-bold text-gray-800 mb-4">研討會投稿</h1>
@@ -94,4 +94,5 @@
         </div>
     </footer>
 </body>
+
 </html>
