--- a/86wewontforget.html
+++ b/86wewontforget.html
@@ -23,7 +23,7 @@
       }
     </style>
 </head>
-<body class="bg-white text-gray-800 font-sans">
+<body class="text-gray-800 font-sans">
 
     <!-- Header -->
     <header class="bg-white shadow-md sticky top-0 z-50">
@@ -39,7 +39,7 @@
     </header>
 
     <main class="bg-no-repeat bg-cover bg-fixed" style="background-image: url('bg.jpg')">
-        <section class="bg-white py-16 md:py-20">
+        <section class=" py-16 md:py-20">
             <div class="container mx-auto px-6 text-center max-w-xl">
                 <h1 class="text-4xl md:text-5xl font-serif-tc font-bold text-gray-800 mb-4">研討會投稿</h1>
                 <!--
@@ -96,3 +96,4 @@
 </body>
 
 </html>
+
