--- a/86wewontforget.html
+++ b/86wewontforget.html
@@ -23,7 +23,7 @@
       }
     </style>
 </head>
-<body class="text-gray-800 font-sans">
+<body class="bg-no-repeat bg-cover bg-fixed text-gray-800 font-sans" style="background-image: url('bg.jpg')">
 
     <!-- Header -->
     <header class="bg-white shadow-md sticky top-0 z-50">
@@ -38,8 +38,8 @@
       </div>
     </header>
 
-    <main class="bg-no-repeat bg-cover bg-fixed" style="background-image: url('bg.jpg')">
-        <section class=" py-16 md:py-20">
+    <main>
+        <section class="bg-white py-16 md:py-20">
             <div class="container mx-auto px-6 text-center max-w-xl">
                 <h1 class="text-4xl md:text-5xl font-serif-tc font-bold text-gray-800 mb-4">研討會投稿</h1>
                 <!--
@@ -94,6 +94,4 @@
         </div>
     </footer>
 </body>
-
 </html>
-
