--- a/86wewontforget.html
+++ b/86wewontforget.html
@@ -39,7 +39,7 @@
     </header>
 
     <main>
-        <section class="bg-white py-16 md:py-20">
+        <section class="py-16 md:py-20">
             <div class="container mx-auto px-6 text-center max-w-xl">
                 <h1 class="text-4xl md:text-5xl font-serif-tc font-bold text-gray-800 mb-4">研討會投稿</h1>
                 <!--
@@ -95,3 +95,4 @@
     </footer>
 </body>
 </html>
+
