--- a/86wewontforget.html
+++ b/86wewontforget.html
@@ -23,7 +23,7 @@
       }
     </style>
 </head>
-<body class="bg-no-repeat bg-cover bg-fixed text-gray-800 font-sans" style="background-image: url('bg.jpg')">
+<body class="bg-no-repeat bg-cover bg-fixed text-gray-800 font-sans flex flex-col min-h-screen" style="background-image: url('bg.jpg')">
 
     <!-- Header -->
     <header class="bg-white shadow-md sticky top-0 z-50">
@@ -38,7 +38,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="flex-grow">
         <section class="py-16 md:py-20">
             <div class="container mx-auto px-6 text-center max-w-xl">
                 <h1 class="text-4xl md:text-5xl font-serif-tc font-bold text-gray-800 mb-4">研討會投稿</h1>
@@ -80,7 +80,6 @@
                 -->
             </div>
         </section>
-
     </main>
 
     <!-- Footer -->
@@ -95,4 +94,3 @@
     </footer>
 </body>
 </html>
-
