--- a/submission-symposium.html
+++ b/submission-symposium.html
@@ -19,7 +19,7 @@
     <header class="bg-white shadow-md sticky top-0 z-50">
       <div class="pl-[2px] pr-4 py-4 flex justify-between items-center">
         <a href="index.html" class="flex items-center space-x-3">
-            <img src="https://via.placeholder.com/40x40.png?text=Logo" alt="研討會 Logo" class="h-10">
+            <img src="LOGO.jpg" alt="研討會 Logo" class="h-10">
             <span class="text-2xl font-bold text-blue-600">第33屆中華民國人因工程學會年會暨學術研討會</span>
         </a>
         <nav>
@@ -115,3 +115,4 @@
     </footer>
 </body>
 </html>
+
