--- a/index.html
+++ b/index.html
@@ -875,6 +875,9 @@
                         <h3 class="text-3xl font-bold text-gray-800 mb-8 text-center">協力單位(新增中)</h3>
                         <p class="text-center text-xl text-gray-600 mb-10">感謝以下單位的支持與贊助，讓本次研討會得以順利舉行。</p>
                         <div class="grid grid-cols-2 md:grid-cols-4 gap-10 items-center">
+                            <div class="flex justify-center" title="中原大學">
+                                <img src="CYCU.png" alt="中原大學" class="max-h-30 transition-all duration-300 cursor-pointer">
+                            </div>
                             <div class="flex justify-center" title="國科會">
                                 <img src="NSTC.jpg" alt="國科會" class="max-h-30 transition-all duration-300 cursor-pointer">
                             </div>
@@ -890,13 +893,15 @@
                             <div class="flex justify-center" title="工程科技推展中心">
                                 <img src="ETPC.jpg" alt="工程科技推展中心" class="max-h-25 transition-all duration-300 cursor-pointer">
                             </div>
+                            
+                            <div class="flex justify-center" title="人工智慧協會">
+                                <img src="TAIA.JPG" alt="人工智慧協會" class="max-h-30 transition-all duration-300 cursor-pointer">
+                            </div>
+                            <div class="flex justify-center" title="智飛科技股份有限公司">
+                                <img src="UAV.JPG" alt="智飛科技股份有限公司" class="max-h-30 transition-all duration-300 cursor-pointer">
+                            </div>
+                            
                             <!--
-                            <div class="flex justify-center" title="國科會">
-                                <img src="NSTC.jpg" alt="國科會" class="max-h-30 transition-all duration-300 cursor-pointer">
-                            </div>
-                            <div class="flex justify-center" title="工業工程學會">
-                                <img src="CIIE.png" alt="工業工程學會" class="max-h-30 transition-all duration-300 cursor-pointer">
-                            </div>
                             <div class="flex justify-center" title="金屬產業低碳聯盟">
                                 <img src="MILCA.png" alt="金屬產業低碳聯盟" class="max-h-40 transition-all duration-300 cursor-pointer">
                             </div>
@@ -1453,6 +1458,7 @@
     </script>
 </body>
 </html>
+
 
 
 
