--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div></div>
                 <a href="#location" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-4 px-1 rounded-lg transition duration-200 ">交通與住宿</a>
                 <a href="#faq" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-4 px-1 rounded-lg transition duration-200 ">常見問題</a>
-                <a href="#sponsors" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-4 px-1 rounded-lg transition duration-200 ">協力單位</a>
+                <a href="#sponsors" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-4 px-1 rounded-lg transition duration-200 ">贊助單位</a>
                 <a href="#contact" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-4 px-1 rounded-lg transition duration-200">聯絡我們</a>
             </nav>
             <!-- 漢堡圖示按鈕 (永遠顯示，用於開啟選單) --> 
@@ -118,7 +118,7 @@
             <a href="#submission" class="block text-xl font-semibold text-gray-700 hover:bg-blue-50 hover:text-blue-600 py-4 px-4 rounded-lg transition duration-200 border-b">活動資訊</a>
             <a href="#location" class="block text-xl font-semibold text-gray-700 hover:bg-blue-50 hover:text-blue-600 py-4 px-4 rounded-lg transition duration-200 border-b">交通與住宿</a>
             <a href="#faq" class="block text-xl font-semibold text-gray-700 hover:bg-blue-50 hover:text-blue-600 py-4 px-4 rounded-lg transition duration-200 border-b">常見問題</a>
-            <a href="#sponsors" class="block text-xl font-semibold text-gray-700 hover:bg-blue-50 hover:text-blue-600 py-4 px-4 rounded-lg transition duration-200 border-b">協力單位</a>
+            <a href="#sponsors" class="block text-xl font-semibold text-gray-700 hover:bg-blue-50 hover:text-blue-600 py-4 px-4 rounded-lg transition duration-200 border-b">贊助單位</a>
             <a href="#contact" class="block text-xl font-semibold text-gray-700 hover:bg-blue-50 hover:text-blue-600 py-4 px-4 rounded-lg transition duration-200">聯絡我們</a>
         </nav>
     </div>
@@ -872,7 +872,7 @@
                 <div class="max-w-5xl mx-auto space-y-20">
                     <!-- Subsection 3: Sponsors and Partners -->
                     <div>
-                        <h3 class="text-3xl font-bold text-gray-800 mb-8 text-center">協力單位(新增中)</h3>
+                        <h3 class="text-3xl font-bold text-gray-800 mb-8 text-center">贊助單位(新增中)</h3>
                         <p class="text-center text-xl text-gray-600 mb-10">感謝以下單位的支持與贊助，讓本次研討會得以順利舉行。</p>
                         <div class="grid grid-cols-2 md:grid-cols-4 gap-10 items-center">
                             <div class="flex justify-center" title="中原大學">
@@ -1458,6 +1458,7 @@
     </script>
 </body>
 </html>
+
 
 
 
