--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                                 <tr class="hover:bg-purple-50 text-center">
                                     <td class="p-4 border-b border-purple-200 text-xs md:text-base">台日韓論壇<br>Taiwan-Japan-Korea international forum</td>
                                     <td class="p-4 border-b border-purple-200 ">11:00 - 12:30</td>
-                                    <td class="p-4 border-b border-purple-200">秀德廳 Siou De Hell</td>
+                                    <td class="p-4 border-b border-purple-200">秀德廳<br>Siou De Hell</td>
                                 </tr>
                                 <tr class="hover:bg-purple-50 text-center">
                                     <td class="p-4 border-b border-purple-200">午餐/人因學會會員大會與休息時間</td>
