--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                         </tr>
                         <tr class="bg-gray-100">
                             <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 text-center">劉品伶</td>
-                            <td colspan="2" class="px-6 py-3 text-gray-700">大同大學工業設計系 助理教授</td>
+                            <td colspan="2" class="px-6 py-3 text-gray-700">大同大學數位媒體設計學系 助理教授</td>
                         </tr>
                         <tr class="bg-gray-100">
                             <td class="px-6 py-3 whitespace-nowrap font-medium text-gray-900 text-center">賴學儀</td>
@@ -1457,6 +1457,7 @@
     </script>
 </body>
 </html>
+
 
 
 
