--- a/86wewontforget.html
+++ b/86wewontforget.html
@@ -42,6 +42,9 @@
         <section class="py-16 md:py-20">
             <div class="container mx-auto px-6 text-center max-w-xl">
                 <h1 class="text-4xl md:text-5xl font-serif-tc font-bold text-gray-800 mb-4">Cooming Soon</h1>
+                <p>The Microsoft CMT service was used for managing the peer-reviewing process for this conference.
+                    This service was provided for free by Microsoft and they bore all expenses,
+                    including costs for Azure cloud services as well as for software development and support.</p>
                 <!--
                 <p class="text-lg text-gray-500 mb-12">選擇適合您的身分進行報名</p>
                 <div class="overflow-x-auto ">
@@ -94,5 +97,4 @@
     </footer>
 </body>
 </html>
-
 
