--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                 <a href="#news" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-4 px-1 rounded-lg transition duration-200 ">最新消息</a>
                 <a href="#violetevergarden" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-4 px-1 rounded-lg transition duration-200 ">大會組織</a>
                 <a href="#about" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-4 px-1 rounded-lg transition duration-200 ">關於研討會</a>
+                <a href="86wewontforget.html" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-1 px-0 rounded-lg transition duration-200 ">註冊投稿</a>
                 <a href="#schedule" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-4 px-1 rounded-lg transition duration-200 ">議程</a>
                 <a href="registration.html" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-1 px-0 rounded-lg transition duration-200 ">報名資訊</a>
-                <a href="86wewontforget.html" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-1 px-0 rounded-lg transition duration-200 ">論文投稿</a>
                 <a href="#submission" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-4 px-1 rounded-lg transition duration-200 ">活動資訊</a>
                 <div></div>
                 <a href="#location" class="**inline-block** text-lg font-semibold text-gray-700 hover:text-blue-600 py-4 px-1 rounded-lg transition duration-200 ">交通與住宿</a>
@@ -113,6 +113,7 @@
             <a href="#news" class="block text-xl font-semibold text-gray-700 hover:bg-blue-50 hover:text-blue-600 py-4 px-4 rounded-lg transition duration-200 border-b">最新消息</a>
             <a href="#violetevergarden" class="block text-xl font-semibold text-gray-700 hover:bg-blue-50 hover:text-blue-600 py-4 px-4 rounded-lg transition duration-200 border-b">大會組織</a>
             <a href="#about" class="block text-xl font-semibold text-gray-700 hover:bg-blue-50 hover:text-blue-600 py-4 px-4 rounded-lg transition duration-200 border-b">關於研討會</a>
+            <a href="86wewontforget.html" class="block text-xl font-semibold text-gray-700 hover:bg-blue-50 hover:text-blue-600 py-4 px-4 rounded-lg transition duration-200 border-b">註冊投稿</a>
             <a href="#schedule" class="block text-xl font-semibold text-gray-700 hover:bg-blue-50 hover:text-blue-600 py-4 px-4 rounded-lg transition duration-200 border-b">議程</a>
             <a href="registration.html" class="block text-xl font-semibold text-gray-700 hover:bg-blue-50 hover:text-blue-600 py-4 px-4 rounded-lg transition duration-200 border-b">報名資訊</a>
             <a href="#submission" class="block text-xl font-semibold text-gray-700 hover:bg-blue-50 hover:text-blue-600 py-4 px-4 rounded-lg transition duration-200 border-b">活動資訊</a>
